# weather-cli

./: LICENSE  README.md  pyproject.toml  run_server.py
weather/: __init__.py  cli.py
