[project]
name = "weather"
version = "0.1.0"
description = "Weather information service using MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["weather*"]
exclude = ["main*"]

[project.scripts]
weather-cli = "weather.cli:main"
